fixed alignment of navbar contents

--- a/breathe.css
+++ b/breathe.css
@@ -5,6 +5,16 @@
   transition: hover 0.55s;
 }
 
+body{
+  background-image: linear-gradient(rgba(255, 255, 255,0.45),
+  rgba(0,0,0,0.75)), url(Gallery/yoga/contents.jpeg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
+
 .bg-dark{
 --bs-bg-opacity: 0.2;
 }
